# NightFallStudio-Lofi-Generator

./: GUI_TUTORIAL.md  README.md  adaptive_report.json  main.py  pyproject.toml  requirements.txt
examples/: preset_config.sample.json
nightfall_desktop/: __init__.py  __main__.py  app.py
nightfall_desktop/models/: __init__.py  session_models.py
nightfall_desktop/services/: engine_service.py  media_tools_service.py  project_service.py  workers.py
nightfall_desktop/ui/: __init__.py  main_window.py  metadata_dialog.py  preset_editor_dialog.py  theme.py  timeline_widget.py
nightfall_mix/: __init__.py  analysis.py  config.py  effects_presets.py  ffmpeg_graph.py  logging_setup.py  main.py  mixer.py  tracklists.py  utils.py
tests/: test_adaptive.py  test_analysis_cache.py  test_engine_service_memory.py  test_engine_service_preview.py  test_filtergraph.py  test_ordering.py  test_presets.py  test_project_service.py  test_timestamps.py  test_tracklist_outputs.py  test_utils_loudnorm.py
