[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightfall-mix"
version = "0.1.0"
description = "Nightfall cassette mix generator CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "rich>=13.7.1",
  "numpy>=1.26.4",
  "audioread>=3.0.1",
  "soundfile>=0.12.1",
  "librosa>=0.10.2.post1",
  "PySide6>=6.8.0",
]

[project.scripts]
nightfall-mix = "nightfall_mix.main:app_main"
nightfall-studio = "nightfall_desktop.app:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
